# chip-8-emulator

./: .gitignore  CMakeLists.txt  README.md
include/: Chip8.hpp  Screen.hpp
srcs/: Chip8.cpp  Screen.cpp  main.cpp
